# dask-ms

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  authors.html  conftest.py  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  readme.html  readthedocs.yml  requirements.readthedocs.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tbump.toml  tox.ini  usage.html
.doctrees/: api.doctree  authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml  readthedocs.yml
.travis/: pep8.docker  python2.docker  python35.docker  python36.docker  python37.docker  python38.docker
_modules/: index.html
_modules/daskms/: dask_ms.html  table_proxy.html
_sources/: api.rst.txt  index.rst.txt
daskms/: __init__.py  array_api_utils.py  casa_schema.py  chunking.py  columns.py  config.py  conftest.py  constants.py  dask_ms.py  dataset.py  dataset_schema.py  example_data.py  expressions.py  fsspec_store.py  ms_structure.py  multiton.py  new_table_proxy.py  observation.py  optimisation.py  ordering.py  parallel_table.py  patterns.py  query.py  reads.py  table.py  table_executor.py  table_proxy.py  table_schemas.py  testing.py  utils.py  writes.py
daskms/apps/: application.py  arguments.py  base.py  conftest.py  convert.py  entrypoint.py  formats.py  fragments.py  katdal_import.py
daskms/apps/conf/: logging.ini
daskms/apps/tests/: test_chunk_transformer.py  test_convert.py
daskms/arrow/: schema.py
daskms/descriptors/: builder.py  builder_factory.py  ms.py  ms_subtable.py  ratt_ms.py  register_default_builders.py
daskms/descriptors/tests/: test_builder_factory.py  test_default_builder.py  test_ms_builder.py  test_ms_subtable_builder.py
daskms/experimental/: util.py  utils.py
daskms/experimental/arrow/: __init__.py  arrow_schema.py  extension_types.py  reads.py  require_arrow.py  schema.py  write.py  writes.py
daskms/experimental/fragments/: __init__.py
daskms/experimental/katdal/: __init__.py  constants.py  corr_products.py  katdal_import.py  meerkat_antennas.py  mock_dataset.py  msv2_facade.py  msv2_proxy.py  transpose.py  uvw.py
daskms/experimental/multisource/: __init__.py
daskms/experimental/tests/: test_utils.py
daskms/experimental/zarr/: __init__.py
daskms/tests/: conftest.py  test_array_api_utils.py  test_casa_schema.py  test_chunking.py  test_columns.py  test_dataset.py  test_dataset_keywords.py  test_dataset_schema.py  test_executor.py  test_expression.py  test_fsspec_store.py  test_github.py  test_keywords.py  test_metadata.py  test_ms_creation.py  test_ms_read_and_update.py  test_ms_structure.py  test_multiton_metaclass.py  test_new_table_proxy.py  test_observation.py  test_optimisation.py  test_optional.py  test_ordering.py  test_patterns.py  test_profiling.py  test_storage.py  test_stress.py  test_table.py  test_table_proxy.py  test_table_proxy_profiling.py  test_table_schemas.py  test_utils.py
docs/: Makefile  api.rst  concepts.rst  conf.py  index.rst  installation.rst  make.bat  tutorial.rst  usage.rst
docs/concepts/: ms.rst  pyarrays.rst
docs/tutorial/: datasets.rst  reads.rst  writes.rst
essays/: lazy_proxy_process_essay.py  read_parquet_dataset.py  sql_parser.py
examples/: example.py  ms_subtable_join.py  sched_context.py
xarray_ms/: __init__.py  file_cache.py  known_ms_dims.py  known_table_schemas.py  table_proxy.py  xarray_ms.py
xarrayms/: __init__.py  columns.py  creation.py  dataset.py  descriptors.py  distributed_support.py  known_table_schemas.py  new_executor.py  ordering.py  query.py  reads.py  table.py  table_cache.py  table_executor.py  table_proxy.py  table_schemas.py  utils.py  writes.py  xarray_ms.py
xarrayms/descriptors/: builder.py  builder_factory.py  dminfo.py  ms.py  ms_subtable.py  plugin.py  ratt_ms.py
xarrayms/descriptors/tests/: test_builder_factory.py  test_default_builder.py  test_descriptor.py  (+6 more)
xarrayms/tests/: conftest.py  test_columns.py  test_correct_read.py  test_correct_write.py  test_creation.py  test_dataset.py  test_descriptor.py  test_distributed.py  test_dummy.py  test_ms.py  test_ms_creation.py  test_ms_read_and_update.py  test_optional.py  test_ordering.py  test_stress.py  test_table_cache.py  test_table_executor.py  test_table_proxy.py  test_table_schemas.py  test_utils.py
(+8 files in other folders)
