[tool.poetry]
name = "dask-ms"
version = "0.2.20"
description = "xarray Dataset from CASA Tables"
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
license = "BSD3"
readme = "README.rst"
packages = [{include = "daskms"}]

[tool.poetry.dependencies]
python = "^3.9, < 3.13"
appdirs = "^1.4.4"
dask = {extras = ["array"], version = ">= 2023.1.1"}
donfig = "^0.7.0"
python-casacore = "^3.5.1"
pyarrow = {version = "^14.0.1", optional = true}
zarr = {version = "^2.12.0", optional=true}
xarray = {version = ">= 2023.01.0", optional=true}
s3fs = {version = ">= 2023.1.0", optional=true}
minio = {version = "^7.2.0", optional = true}
pytest = {version = "^7.1.3", optional=true}
pandas = {version = "^2.1.2", optional = true}

[tool.poetry.scripts]
dask-ms = "daskms.apps.entrypoint:main"
fragments = "daskms.apps.fragments:main"

[tool.poetry.extras]
arrow = ["pandas", "pyarrow"]
xarray = ["xarray"]
zarr = ["zarr"]
s3 = ["s3fs"]
complete = ["s3fs", "pandas", "pyarrow", "xarray", "zarr"]
testing = ["minio", "pytest"]

[tool.poetry.group.dev.dependencies]
tbump = "^6.9.0"
pre-commit = "^2.20.0"
black = "^22.8.0"
ipython = "^8.16.1"
ipdb = "^0.13.13"
ruff = "^0.1.3"

[tool.poetry.group.docs.dependencies]
furo = "^2022.9.15"
Sphinx = "^5.1.1"
numpydoc = "^1.4.0"
Pygments = "^2.13.0"
sphinx-copybutton = "^0.5.0"


[tool.ruff]
line-length = 88
target-version = "py310"

select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # isort
    "I001",
    "I002",
    # tidy imports
    "TID"
]

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
