
[project]
name = "dask-ms"
description = "xarray Dataset from CASA Tables"
license = "BSD-3-Clause"
version = "0.2.28"
readme = "README.rst"
authors = [{name = "Simon Perkins", email = "simon.perkins@gmail.com"}]
requires-python = '>=3.10,<3.14'
dependencies = ['appdirs >=1.4.4', 'dask[array] >=2023.1.1,<2024.11.0', 'donfig >=0.8.0', 'python-casacore >=3.7.0', 'numpy >=2.0.0', 'fsspec >=2022.7.0', 'cacheout >=0.16.0']

[project.scripts]
dask-ms = "daskms.apps.entrypoint:main"
fragments = "daskms.apps.fragments:main"

[project.optional-dependencies]
arrow = ['pandas >=2.1.2', 'pyarrow >=14.0.1']
katdal = [
    'katdal >=0.23',
    'xarray >=2023.01.0',
    'zarr (>=2.12.0, < 3.0.0)',
    'numcodecs < 0.16.0'
]
xarray = ['xarray >= 2023.01.0']
zarr = ['zarr (>= 2.12.0, < 3.0.0)', 'numcodecs < 0.16.0']
s3 = ['s3fs >=2023.1.0']
complete = [
    's3fs >= 2023.1.0',
    'pandas',
    'pyarrow >=14.0.1',
    'xarray>=2023.01.0', 'zarr (>= 2.12.0, < 3.0.0)',
    'numcodecs < 0.16.0',
    'katdal >= 0.23']
testing = ['minio >=7.2.0', 'pytest >=8.0.0']
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "tbump>=6.11.0",
]
docs = [
    "furo >=2025.9.25",
    "sphinx >=5.1.1",
    "numpydoc >=1.9.0",
    "pygments >=2.19.2",
    "sphinx-copybutton >=0.5.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daskms"]




[tool.ruff]
line-length = 88
target-version = "py310"

select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # isort
    "I001",
    "I002",
    # tidy imports
    "TID"
]
